Fix header spacing

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@
 .logo {
   font-size: 1.5rem;
   font-weight: 500;
-  padding: 1rem 2.5rem;
+  padding: 1rem 0;
   letter-spacing: .1rem;
   a {
     color: #ccc;
@@ -18,7 +18,6 @@
 .user {
   text-align: right;
   line-height: 3.5rem;
-  padding-right: 2.5rem;
   color: #fff;
   letter-spacing: .1rem;
   text-transform: capitalize;
